feat: Migrate auth and voucher management to API
Replaces direct Supabase integration with an API layer for user authentication and voucher operations. This change also updates dependencies and refactors mock data handling.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
     "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.83.0"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
   }
 }
 </script>
